Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.2.0
    mcMMO's config system has been rewritten
    Many config files are now generated on demand instead of being copied from within the JAR
    All config nodes that used to be styled with CamelCase or otherwise now use hyphens (-) as spaces for readability and consistency
    All config nodes will now use Capital letters at the start of each nodes name and after each hyphen (-)
    All config nodes now include a comment with the default value of the node to use as reference
    Expanded settings relating to purging users who have not leveled or users who had not logged in for many months
    NOTE: Not every config key that was renamed will be listed here

    Bug Fixes
    Fixed a bug where players who started at level 1 would not be purged from the DB for being "powerless"
    Fixed a potential bug where players could be awarded XP for cancelled tame events

    Permission Node Changes
    Removed "mcmmo.motd" because it makes no sense to have this as a player permission when its a config option
    Removed "mcmmo.showversion" because this one also makes no sense

    Config Changes

    All author ad-type (donations, urls, etc) message config options will now be found in "author_support_advertisements.conf"
    Config option "URL_Links" renamed -> "Show-Website-Links"
    Added config option for showing author paypal info in /mcmmo (previously this was tied to the motd setting)
    Added config option for showing author patreon links in various commands

    Automated backup config options will now be found in "automated_backups.conf"

    Command config options will now be found in "commands.conf"

    Custom item (Chimaera Wing) config options will now be found in "custom_items.conf"

    Language config options will now be found in "language.conf"
